<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewFlipper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    android:orientation="vertical" >

    <!-- Main Listen screen -->
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <!-- Header -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#1C4F84"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="7dp" >

            <Button
                android:id="@+id/home_button"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_button_selector"
                android:text="@string/home"
                android:textColor="@color/nav_button_text_selector" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/listen_activity_label"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <Button
                android:id="@+id/refine_button"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_button_selector"
                android:text="@string/refine"
                android:textColor="@color/nav_button_text_selector" />

        </LinearLayout>

        <!-- info lines -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/roundware_logo"
                android:padding="10dp"
                android:src="@drawable/rw_r" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/header_line1_textview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal"
                    android:text="@string/welcome_to_roundware"
                    android:textAppearance="@android:style/TextAppearance.Small.Inverse" />

                <TextView
                    android:id="@+id/header_line2_textview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/press_play_to_start"
                    android:textAppearance="@android:style/TextAppearance.Medium.Inverse" />

                <TextView
                    android:id="@+id/header_line3_textview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textAppearance="@android:style/TextAppearance.Small.Inverse" />
            </LinearLayout>
        </LinearLayout>

        <!-- Centered Play/Pause button -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/play_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/play_listen_selector"
                android:layout_gravity="center_horizontal"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>
        
        <!-- Button bar at the bottom -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="0"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/flag_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/flag_selector"
                android:drawablePadding="3dp"
                android:textColor="#1C4F84"
                android:textOff="@string/flag"
                android:textOn="@string/flag" />

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:layout_weight="1" />

            <ToggleButton
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:drawableTop="@drawable/like_selector"
                android:drawablePadding="3dp"
                android:textColor="#1C4F84"
                android:textOff="@string/like"
                android:textOn="@string/like" />
            
        </LinearLayout>
        
    </LinearLayout>
    
	<!-- Refine filter screen -->    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <WebView
            android:id="@+id/filter_webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

	</LinearLayout>

</ViewFlipper>