<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewFlipper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    android:orientation="vertical" >

    <!-- Page loading screen -->
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
		android:background="@drawable/rw_splash"
        >
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#1C4F84"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="7dp" >
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
            	android:text="@string/speak_activity_label"
                android:textAppearance="@android:style/TextAppearance.Large" />
        </LinearLayout>

	    <!-- Spacer -->
	    <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="0dip"
	            android:layout_weight="1"
	            />
	    <TextView 
	        	android:id="@+id/legal_agreement_textview"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="Legal agreement placeholder text"
	            android:layout_marginTop="10dp"
	            android:layout_marginBottom="20dp"
	            android:padding="10dp"
	            android:gravity="bottom|center_horizontal"
	        />

	    <!-- Button bar at the bottom -->
	    <LinearLayout
	            android:orientation="horizontal"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="10dp">
	        <Button
	                android:id="@+id/agree_button"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
                	android:background="@drawable/home_selector"
	                android:text="@string/agree"
	                android:textColor="#1C4F84"
	                android:enabled="false"
	                />
	    </LinearLayout>

	</LinearLayout>
    
    <!-- Recording tagging screen -->    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <WebView
            android:id="@+id/tagging_webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

	</LinearLayout>
    
    <!-- Main Recording screen -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <!-- Header -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#1C4F84"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="7dp" >

            <Button
                android:id="@+id/home_button"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:background="@drawable/home_normal"
                android:text="@string/home"
                android:visibility="invisible"
                android:textColor="#FFF" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
            	android:text="@string/speak_activity_label"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_button_selector"
                android:text="@string/cancel"
                android:textColor="@color/nav_button_text_selector" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/roundware_logo"
                android:padding="10dp"
                android:src="@drawable/rw_r" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <!-- info lines -->

                <TextView
                    android:id="@+id/header_line1_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:text="@string/welcome_to_roundware"
                    android:textAppearance="@android:style/TextAppearance.Small.Inverse" />

                <TextView
                    android:id="@+id/header_line2_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/press_record_to_start"
                    android:textAppearance="@android:style/TextAppearance.Medium.Inverse" />
            </LinearLayout>
        </LinearLayout>

		<!-- TODO: Instruction graphic, count-down, level meter -->

		<ImageView
		    android:id="@+id/steps_imageview" 
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:src="@drawable/steps"
            android:scaleType="centerInside"
            android:layout_weight="1"
            />

        <!-- Button bar at the bottom -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/rerecord_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/rerecord_selector"
                android:drawablePadding="3dp"
                android:textColor="#1C4F84"
                android:text="@string/rerecord" />
            
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            
            <ToggleButton
                android:id="@+id/record_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/record_selector"
                android:textOn=""
                android:textOff=""
                 />

            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            
            <Button
                android:id="@+id/upload_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableTop="@drawable/upload_selector"
                android:drawablePadding="3dp"
                android:textColor="#1C4F84"
                android:text="@string/upload" />

        </LinearLayout>
    </LinearLayout>

</ViewFlipper>