<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/rw_splash"
        >

    <!-- Header -->
    <TextView
            android:background="@color/nav_bar_bgrd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textStyle="bold"
            android:textColor="@color/nav_bar_text"
            android:text="@string/main_activity_label"
            />

    <!-- info lines -->
    <TextView
            android:id="@+id/header_line1_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@android:style/TextAppearance.Small.Inverse"
            android:text=""
            />
    <TextView
            android:id="@+id/header_line2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@android:style/TextAppearance.Medium.Inverse"
            android:text=""
            />
    
    <!-- Spacer -->
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            />

    <!-- Button bar at the bottom -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
        <Button
                android:id="@+id/listen_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
				android:background="@drawable/home_selector"
	            android:textAppearance="@android:style/TextAppearance.Large"
	            android:textStyle="bold"
                android:text="@string/listen"
                android:textColor="@color/home_button_text_selector"
                />
	    <LinearLayout
	            android:layout_width="20dp"
	            android:layout_height="0dp"
	            />
        <Button
                android:id="@+id/speak_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
				android:background="@drawable/home_selector"
	            android:textAppearance="@android:style/TextAppearance.Large"
	            android:textStyle="bold"
                android:text="@string/speak"
                android:textColor="@color/home_button_text_selector"
                />
	    <LinearLayout
	            android:layout_width="20dp"
	            android:layout_height="0dp"
	            />
        <Button
                android:id="@+id/exit_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
				android:background="@drawable/home_selector"
	            android:textAppearance="@android:style/TextAppearance.Large"
	            android:textStyle="bold"
                android:text="@string/quit"
                android:textColor="@color/home_button_text_selector"
                />
    </LinearLayout>

</LinearLayout>

